--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <h1>Traceability Lab</h1>
+    <form>
+        <input type="text" placeholder="add name">
+        <button>Add Name</button>
+    </form>
 </body>
 
 </html>
